sonarqube/sonarqube-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sonarqube
spec:
  replicas: 1
  revisionHistoryLimit: 1
  selector:
    matchLabels:
      app: sonarqube
  template:
    metadata:
      labels:
        app: sonarqube
    spec:
      containers:
      - image: ghcr.io/dysnomia-studio/sonarqube:main
        name: sonarqube
        ports:
        - containerPort: 9000
        imagePullPolicy: Always
        resources:
          requests:
            cpu: 25m
            memory: 2000Mi
          limits:
            cpu: 2000m
            memory: 4000Mi
      imagePullSecrets:
      - name: github
